# 17lands-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  SPEC.md  justfile
.github/workflows/: ci.yml  release-desktop.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: oracle_diff.rs  replay.rs
crates/core/src/: api_client.rs  config.rs  follower.rs  lib.rs  tee.rs  time_parse.rs
crates/core/tests/: api_client_http.rs  parity.rs
crates/core/tests/fixtures/: README.md
crates/desktop/: Cargo.toml  README.md  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: commands.rs  logbridge.rs  main.rs  observer.rs  state.rs
crates/desktop/ui/: app.js  index.html
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/src/: commands.rs  logbridge.rs  main.rs  observer.rs  state.rs
desktop/ui/: style.css
examples/: build_card_db.rs  oracle_diff.rs  replay.rs
packaging/homebrew/: README.md  generate.sh  seventeenlands-desktop.rb  seventeenlands-rust.rb
src/: api_client.rs  card_db.rs  config.rs  follower.rs  lib.rs  main.rs  paths.rs  retry.rs  tee.rs  time_parse.rs
tests/: api_client_http.rs  parity.rs
tests/fixtures/: README.md
tools/: mock_server.py
tools/oracle/: mock_server.py  run_oracle.sh
