# Virtual workspace. Two shipped artifacts — the `seventeenlands` CLI (`crates/cli`) and the
# Tauri desktop app (`crates/desktop`) — share the wire-compatible core (`crates/core`).
#
# `default-members` is the CLI + core only, so bare `cargo build/test/clippy` (and CI) skip the
# desktop crate, which needs a system webview toolkit (webkit2gtk on Linux). Build it explicitly
# with `-p seventeenlands-desktop` or via the desktop CI job.
[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/desktop"]
default-members = ["crates/core", "crates/cli"]

# Metadata shared by all workspace crates (each crate inherits with `field.workspace = true`).
[workspace.package]
version = "0.1.2"
license = "GPL-3.0-only"
repository = "https://github.com/fredoliveira/17lands-rust"
authors = ["Fred Oliveira <fred@helloform.com>"]
rust-version = "1.85"
