# Virtual workspace. Two shipped artifacts тАФ the `recall` CLI (`crates/cli`) and the
# Tauri desktop app (`crates/desktop`) тАФ share the wire-compatible core (`crates/core`).
#
# `default-members` is the CLI + core only, so bare `cargo build/test/clippy` (and CI) skip the
# desktop crate, which needs a system webview toolkit (webkit2gtk on Linux). Build it explicitly
# with `-p recall-desktop` or via the desktop CI job.
[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/desktop"]
default-members = ["crates/core", "crates/cli"]

# Metadata shared by all workspace crates (each crate inherits with `field.workspace = true`).
[workspace.package]
version = "0.2.0"
license = "GPL-3.0-only"
repository = "https://github.com/fredoliveira/recall"
authors = ["Fred Oliveira <fred@helloform.com>"]
rust-version = "1.85"
