[package]
name = "seventeenlands-desktop"
version = "0.1.1"
edition = "2021"
description = "Menu-bar desktop app for the 17Lands MTGA log client"
license = "GPL-3.0-only"
authors = ["Fred Oliveira <fred@helloform.com>"]
rust-version = "1.85"

# Default bin is `src/main.rs`, named after the crate.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 with the system-tray / menu-bar feature and PNG icon decoding for the tray.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
# The wire-compatible core: we reuse its follower, config, paths, and api_client unchanged.
seventeenlands-rust = { path = ".." }
