# The installable CLI crate. Keeps the name `seventeenlands-rust` so
# `cargo install --git <repo> seventeenlands-rust` keeps working and produces `seventeenlands`.
[package]
name = "seventeenlands-rust"
description = "Rust port of the 17Lands MTGA log client (uploads MTG Arena data to 17lands.com)"
edition = "2024"
readme = "../../README.md"
keywords = ["mtg", "mtga", "17lands", "magic", "draft"]
categories = ["command-line-utilities", "games"]
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "seventeenlands"
path = "src/main.rs"

[dependencies]
seventeenlands-core = { path = "../core" }
# CLI argument parsing.
clap = { version = "4", features = ["derive"] }
# Console logging (clean + verbose formats); not part of the wire contract.
log = "0.4"
env_logger = "0.11"
anstyle = "1"
# Timestamps for the log formatter.
chrono = "0.4"
